# binacpp

./: CMakeLists.txt  libbinance-0.8.pc
cmake-modules/: FindCURLpp.cmake  FindLibWebsockets.cmake
example/: Makefile  example.cpp
lib/libbinacpp/include/: binacpp.h
src/: CMakeLists.txt  binacpp.cpp  binacpp.h  binacpp_utils.cpp  binacpp_websocket.cpp
